--- a/templates/pets/task_form.html
+++ b/templates/pets/task_form.html
@@ -5,30 +5,26 @@
     <form class="block-layout" method="POST">
         <h2>{% if is_update %}Update{% else %}Add a New{% endif %} Task</h2>
         {% csrf_token %}
-        {{ form.non_field_errors }}
 
-        <div class="form-input-block" style="flex-grow: 1">
+        <div class="form-input-block">
             {{ form.pet.label_tag }}
             {{ form.pet }}
             {{ form.pet.errors }}
         </div>
 
         <div class="row-form-input-block">
-
-
-            <div class="form-input-block" style="flex-grow: 1">
+            <div class="form-input-block">
                 {{ form.category.label_tag }}
                 {{ form.category }}
                 {{ form.category.errors }}
             </div>
 
-            <div id="new_category_div" class="form-input-block" style="flex-grow: 1">
+            <div id="new_category_div" class="form-input-block">
                 {{ form.new_category.label_tag }}
                 {{ form.new_category }}
                 {{ form.new_category.errors }}
             </div>
         </div>
-
 
         <div class="form-input-block">
             {{ form.start_date.label_tag }}
@@ -63,28 +59,34 @@
         </div>
 
         <div class="row-form-input-block">
-            <div class="form-input-block" style="flex-grow: 1">
+            <div class="form-input-block">
                 {{ form.end_date.label_tag }}
                 {{ form.end_date }}
                 {{ form.end_date.errors }}
             </div>
 
-            <div class="form-input-block toggle-checkbox" style="margin-top: auto">
+            <div class="form-input-block toggle-checkbox">
                 {{ form.important }}
                 {{ form.important.label_tag }}
             </div>
         </div>
 
+        {% if form.non_field_errors %}
+            <div class="form-input-block">
+                {{ form.non_field_errors }}
+            </div>
+        {% endif %}
+
         <button type="submit" class="primary-button" {% if is_update %}onclick="logUserAction('update_task')"
-                {% else %}onclick="logUserAction('save_task')"{% endif %}>{% if is_update %}Update{% else %}
-            Save{% endif %} Task
+                {% else %}onclick="logUserAction('save_task')"{% endif %}>
+            {% if is_update %}Update{% else %}Save{% endif %} Task
         </button>
 
         {% if is_update %}
-            <a style="display: flex" href="{% url 'delete_task' task.id %}"
+            <a class="delete-task-link" href="{% url 'delete_task' task.id %}"
                onclick="return confirm('Are you sure you want to delete this task?');">
-                <button style="flex-grow: 1" type="button" class="accent-1-button"
-                        onclick="logUserAction('delete_task')">Delete Task
+                <button type="button" class="accent-1-button" onclick="logUserAction('delete_task')">
+                    Delete Task
                 </button>
             </a>
         {% endif %}
